tests/errors/string_58/GETCHAR1.src
.IPPcode21

DEFVAR GF@var

GETCHAR GF@var string@string int@-1
